--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
       <div class="container">
         <div class="row">
           <div class="col navbar">
-            <img src="images/megapartslogo.svg" alt="logo" />
+            <img src="./images/megapartslogo.svg" alt="logo" />
             <div class="line"></div>
             <p><span>MEGA</span>CARS</p>
             <p class="mega-offer"><span>MEGA</span>ОБЯВИ</p>
-            <img src="/icons/chat.svg" alt="chat-icon" />
-            <img src="/icons/basket.svg" alt="basket" />
-            <img src="/icons/favorites.svg" alt="favorites" />
+            <img src="./icons/chat.svg" alt="chat-icon" />
+            <img src="./icons/basket.svg" alt="basket" />
+            <img src="./icons/favorites.svg" alt="favorites" />
             <div class="line"></div>
-            <img src="/icons/login-icon.svg" alt="login-icon" />
+            <img src="./icons/login-icon.svg" alt="login-icon" />
             <p class="login-text">ВХОД</p>
             <div class="line"></div>
-            <img src="/icons/social-media.svg" alt="social-media-icon" />
+            <img src="./icons/social-media.svg" alt="social-media-icon" />
             <div class="line"></div>
-            <img src="/icons/contact.svg" alt="contact-icon" />
+            <img src="./icons/contact.svg" alt="contact-icon" />
             <p>02 437 32 48</p>
           </div>
         </div>
@@ -63,33 +63,33 @@
       <div class="container">
         <div class="row navbar sub-nav">
           <div class="home">
-            <img src="/icons/home-icon.svg" alt="home-icon" />
+            <img src="./icons/home-icon.svg" alt="home-icon" />
           </div>
           <div class="home long blue">
-            <img src="/icons/parts-icon.svg" alt="parts-icon" />АВТОЧАСТИ
+            <img src="./icons/parts-icon.svg" alt="parts-icon" />АВТОЧАСТИ
           </div>
           <div class="home long green">
-            <img src="/icons/merchant-icon.svg" alt="merchant-icon" />БОРСА
+            <img src="./icons/merchant-icon.svg" alt="merchant-icon" />БОРСА
             ЧАСТИ
           </div>
           <div class="home long light-green">
-            <img src="/icons/car-icon.svg" alt="car-icon" />АВТОБОРСА
+            <img src="./icons/car-icon.svg" alt="car-icon" />АВТОБОРСА
           </div>
           <div class="home long orange">
             <img
-              src="/icons/steering-wheel-icon.svg"
+              src="./icons/steering-wheel-icon.svg"
               alt="steering-wheel-icon"
             />ПРОДАВА КОЛИ
           </div>
           <div class="home long beige">
-            <img src="/icons/parts-icon.svg" alt="parts-icon" />ПРОДАВА ЧАСТИ
+            <img src="./icons/parts-icon.svg" alt="parts-icon" />ПРОДАВА ЧАСТИ
           </div>
           <div class="home long purple">
-            <img src="/icons/controller.svg" alt="controller" />ИГРИ
+            <img src="./icons/controller.svg" alt="controller" />ИГРИ
           </div>
           <div class="home long insurance">
             <img
-              src="/icons/insurance-icon.svg"
+              src="./icons/insurance-icon.svg"
               alt="insurance-icon"
             />ЗАСТРАХОВКА
           </div>
@@ -102,13 +102,13 @@
         <div class="row search-field">
           <img
             class="pointer-icon"
-            src="/icons/Pointer.svg"
+            src="./icons/Pointer.svg"
             alt="pointer-icon"
           />
           <div class="col-md-4 p-2 search-container">
             <div class="row mt-2">
               <div class="col-4 search-text">
-                <img src="/icons/search-icon.svg" alt="search-icon" />Бързо
+                <img src="./icons/search-icon.svg" alt="search-icon" />Бързо
                 Търсене
               </div>
             </div>
@@ -228,21 +228,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="/images/carousel1.jpg"
+              src="./images/carousel1.jpg"
               class="d-block w-100"
               alt="carousel-img"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="/images/carousel2.jpg"
+              src="./images/carousel2.jpg"
               class="d-block w-100"
               alt="carousel-img"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="/images/carousel3.jpg"
+              src="./images/carousel3.jpg"
               class="d-block w-100"
               alt="carousel-img"
             />
@@ -271,22 +271,22 @@
 
     <div class="container">
       <div class="row features">
-        <img src="/icons/deliver-icon.svg" alt="deliver-icon" />
+        <img src="./icons/deliver-icon.svg" alt="deliver-icon" />
         <div class="col">
           Експресна Доставка
           <p>Доставяме до всяка точна на България</p>
         </div>
-        <img src="/icons/packaging-icon.svg" alt="packaging-icon" />
+        <img src="./icons/packaging-icon.svg" alt="packaging-icon" />
         <div class="col">
           Нови части всеки ден
           <p>Ежедневно зареждаме нова стока.</p>
         </div>
-        <img src="/icons/container-icon.svg" alt="container-icon" />
+        <img src="./icons/container-icon.svg" alt="container-icon" />
         <div class="col">
           Проверено качество
           <p>Авточасти с гаранция.</p>
         </div>
-        <img src="/icons/return-icon.svg" alt="return-icon" />
+        <img src="./icons/return-icon.svg" alt="return-icon" />
         <div class="col">
           Право на връщане
           <p>14 дни право на връщане на всяка поръчка.</p>
@@ -295,7 +295,7 @@
       <div class="row product-section mt-5 justify-content-center">
         <div class="col">
           <div class="ad-spot w-100">
-            <img src="/icons/parts-icon.svg" alt="parts-icon" />
+            <img src="./icons/parts-icon.svg" alt="parts-icon" />
             <h2>Авточасти</h2>
             <p>Най-големия онлайн магазин за авточасти в България!</p>
             <button>Разгледай <i class="fa-solid fa-chevron-right"></i></button>
@@ -307,7 +307,7 @@
           <div class="first-product w-100">
             <img
               class="product-image"
-              src="/images/headlight.png"
+              src="./images/headlight.png"
               alt="product-image.png"
             />
             <h6>
@@ -320,7 +320,7 @@
         <div class="col">
           <img
             class="product-image"
-            src="/images/headlight2.png"
+            src="./images/headlight2.png"
             alt="product-image.png"
           />
           <h6>Фар за Audi A5 Coupe I(06.2007-01.2017), купе, позиция: дясна</h6>
@@ -330,7 +330,7 @@
         <div class="col">
           <img
             class="product-image"
-            src="/images/headlight3.png"
+            src="./images/headlight3.png"
             alt="product-image.png"
           />
           <h6>Фар за Audi A5 Coupe I(06.2007-01.2017), купе, позиция: дясна</h6>
@@ -345,7 +345,7 @@
           <div class="more-offers w-100">
             <img
               class="product-image"
-              src="/images/headlight3.png"
+              src="./images/headlight3.png"
               alt="product-image.png"
             />
             <h6>
@@ -360,7 +360,7 @@
           <div class="more-offers w-100">
             <img
               class="product-image"
-              src="/images/headlight3.png"
+              src="./images/headlight3.png"
               alt="product-image.png"
             />
             <h6>
@@ -375,7 +375,7 @@
           <div class="more-offers w-100">
             <img
               class="product-image"
-              src="/images/headlight3.png"
+              src="./images/headlight3.png"
               alt="product-image.png"
             />
             <h6>
@@ -388,7 +388,7 @@
         </div>
         <div class="col d-flex align-items-center justify-content-center">
           <div class="second-ad-spot w-100">
-            <img src="/icons/merchant-icon.svg" alt="parts-icon" />
+            <img src="./icons/merchant-icon.svg" alt="parts-icon" />
             <h2>Авточасти</h2>
             <p>Най-голямата борса за авточасти в България!</p>
             <button>Разгледай <i class="fa-solid fa-chevron-right"></i></button>
@@ -400,7 +400,7 @@
         <div class="col d-flex align-items-center justify-content-center mt-5">
           <div class="offers"></div>
           <div class="second-ad-spot services light-blue w-100">
-            <img src="/icons/car-icon.svg" alt="car-icon" />
+            <img src="./icons/car-icon.svg" alt="car-icon" />
             <h2>Автоборса</h2>
             <p>Залагане, търгуване и продаване на автомобили.</p>
             <button>Разгледай <i class="fa-solid fa-chevron-right"></i></button>
@@ -410,7 +410,7 @@
         <div class="col d-flex align-items-center justify-content-center mt-5">
           <div class="second-ad-spot second-services orange w-100">
             <img
-              src="/icons/steering-wheel-icon.svg"
+              src="./icons/steering-wheel-icon.svg"
               alt="steering-wheel-icon"
             />
             <h2>Продава коли</h2>
@@ -425,7 +425,7 @@
         </div>
         <div class="col d-flex align-items-center justify-content-center mt-5">
           <div class="second-ad-spot third-services beige w-100">
-            <img src="/icons/parts-icon.svg" alt="parts-icon" />
+            <img src="./icons/parts-icon.svg" alt="parts-icon" />
             <h2>Продава Части</h2>
             <p>Обяви за части.</p>
             <p class="subtext">Част от <span>MEGAОбЯВИ.</span></p>
@@ -438,7 +438,7 @@
         </div>
         <div class="col d-flex align-items-center justify-content-center mt-5">
           <div class="second-ad-spot fourth-services purple w-100">
-            <img src="/icons/controller.svg" alt="controller-icon" />
+            <img src="./icons/controller.svg" alt="controller-icon" />
             <h2>Игри</h2>
             <p>Забавления за ценители.</p>
             <button>Разгледай <i class="fa-solid fa-chevron-right"></i></button>
@@ -450,26 +450,26 @@
         <div class="col d-flex align-items-center justify-content-center">
           <div class="insurance-service insurance-orange w-100">
             <h4>
-              <img src="/icons/redheart.svg" alt="heart-icon" /> Застраховки
+              <img src="./icons/redheart.svg" alt="heart-icon" /> Застраховки
             </h4>
             <p>Застраховай автомобила си.</p>
           </div>
         </div>
         <div class="col d-flex align-items-center justify-content-center">
           <div class="insurance-service credit-green w-100">
-            <h4><img src="/icons/credit.svg" alt="" /> Кредити</h4>
+            <h4><img src="./icons/credit.svg" alt="" /> Кредити</h4>
             <p><span>MEGA</span> в нужда се познава.</p>
           </div>
         </div>
         <div class="col d-flex align-items-center justify-content-center">
           <div class="insurance-service diary-blue w-100">
-            <h4><img src="/icons/diary.svg" alt="" /> Автодневник</h4>
+            <h4><img src="./icons/diary.svg" alt="" /> Автодневник</h4>
             <p>Твоят Автодневник.</p>
           </div>
         </div>
         <div class="col d-flex align-items-center justify-content-center">
           <div class="insurance-service news-blue w-100">
-            <h4><img src="/icons/news.svg" alt="" /> Новини</h4>
+            <h4><img src="./icons/news.svg" alt="" /> Новини</h4>
             <p>Всико в света на колите.</p>
           </div>
         </div>
@@ -479,52 +479,52 @@
           <!-- Used the Swiper library here to implement the  carousel review-->
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="/icons/quote.svg" alt="quote-icon" />
+              <img src="./icons/quote.svg" alt="quote-icon" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Necessitatibus unde doloremque quas libero excepturi qui!
               </p>
-              <img class="user-icon" src="/icons/user.svg" alt="" />
+              <img class="user-icon" src="./icons/user.svg" alt="" />
               <h6>Виктор Марков</h6>
               <div class="user-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
             </div>
             <div class="swiper-slide">
-              <img src="/icons/quote.svg" alt="quote-icon" />
+              <img src="./icons/quote.svg" alt="quote-icon" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Necessitatibus unde doloremque quas libero excepturi qui!
               </p>
-              <img class="user-icon" src="/icons/user.svg" alt="" />
+              <img class="user-icon" src="./icons/user.svg" alt="" />
               <h6>Мартин Илиев</h6>
               <div class="user-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
             </div>
             <div class="swiper-slide">
-              <img src="/icons/quote.svg" alt="quote-icon" />
+              <img src="./icons/quote.svg" alt="quote-icon" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Necessitatibus unde doloremque quas libero excepturi qui!
               </p>
-              <img class="user-icon" src="/icons/user.svg" alt="" />
+              <img class="user-icon" src="./icons/user.svg" alt="" />
               <h6>Николай Гредански</h6>
               <div class="user-stars">&#9733;&#9733;&#9733;&#9733;</div>
             </div>
             <div class="swiper-slide">
-              <img src="/icons/quote.svg" alt="quote-icon" />
+              <img src="./icons/quote.svg" alt="quote-icon" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Necessitatibus unde doloremque quas libero excepturi qui!
               </p>
-              <img class="user-icon" src="/icons/user.svg" alt="" />
+              <img class="user-icon" src="./icons/user.svg" alt="" />
               <h6>Виолета Тифова</h6>
               <div class="user-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
             </div>
             <div class="swiper-slide">
-              <img src="/icons/quote.svg" alt="quote-icon" />
+              <img src="./icons/quote.svg" alt="quote-icon" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Necessitatibus unde doloremque quas libero excepturi qui!
               </p>
-              <img class="user-icon" src="/icons/user.svg" alt="" />
+              <img class="user-icon" src="./icons/user.svg" alt="" />
               <h6>Магдалена Асенова</h6>
               <div class="user-stars">&#9733;&#9733;&#9733;&#9733;</div>
             </div>
@@ -538,14 +538,14 @@
       <div class="row">
         <div class="col">
           <div class="map">
-            <img src="/icons/map.svg" alt="map-icon">
-            <img class="bubble-icon" src="/icons/bubble.svg" alt="">
+            <img src="./icons/map.svg" alt="map-icon">
+            <img class="bubble-icon" src="./icons/bubble.svg" alt="">
             <!-- <div class="bubble-expansion">
               <p>MEGAPARTS Sofia</p>
               <p>Ул. Васил Левски 123</p>
             </div> -->
-            <img class="part-two" src="/icons/partTwo.svg" alt="">
-            <img class="part-three" src="/icons/partThree.svg" alt="">
+            <img class="part-two" src="./icons/partTwo.svg" alt="">
+            <img class="part-three" src="./icons/partThree.svg" alt="">
           </div>
         </div>
       </div>
@@ -593,7 +593,7 @@
           </div>
           <div class="col mt-4">
             <div class="footer-logo">
-              <img src="/images/megapartslogo.svg" alt="" />
+              <img src="./images/megapartslogo.svg" alt="" />
               <p class="copyright">2023 © MEGAPARTS Marketplace</p>
               <p><span class="footer-megacars">MEGA</span>CARS</p>
               <p><span class="footer-megaoffers">MEGA</span>ОБЯВИ</p>
